# dbcrossbar

./: .gitignore  .rustfmt.toml  .travis.yml  404.html  ALL_LICENSES.html  CHANGELOG.md  CNAME  CONTRIBUTING.md  Cargo.toml  DESIGN.md  Dockerfile  Justfile  LICENSE-MIT.txt  README.md  about.hbs  about.toml  bigml.html  bigquery-schema.html  bigquery.html  build-release  changes.html  commands.html  config.html  conv.html  count.html  cp.html  credits.html  csv.html  csv_interchange.html  dbcrossbar-schema.html  dbcrossbar-ts.html  deny.toml  drivers.html  features.html  file.html  gs.html  how.html  index.html  installing.html  intro.html  (+10 more)
crates/dbcrossbar_trino/: CHANGELOG.md  Cargo.toml  Justfile  README.md
crates/dbcrossbar_trino/proptest-regressions/: types.txt
crates/dbcrossbar_trino/src/: connectors.rs  errors.rs  ident.rs  lib.rs  proptest.rs  quoted_string.rs  table_options.rs  transforms.rs  types.rs
crates/dbcrossbar_trino/src/client/: deserialize_value.rs  errors.rs  mod.rs  wire_types.rs
crates/dbcrossbar_trino/src/pretty/: ast.rs  mod.rs
crates/dbcrossbar_trino/src/values/: is_close_enough_to.rs  mod.rs
crates/dbcrossbar_trino/tests/: macros.rs
crates/dbcrossbar_trino_macros/: CHANGELOG.md  Cargo.toml  Justfile  README.md
crates/dbcrossbar_trino_macros/src/: lib.rs
crates/dbcrossbar_trino_types/: Cargo.toml
crates/dbcrossbar_trino_types/proptest-regressions/: test.txt  transforms.txt
crates/dbcrossbar_trino_types/src/: client.rs  connectors.rs  ident.rs  lib.rs  proptest.rs  table_options.rs  test.rs  transforms.rs  types.rs
crates/dbcrossbar_trino_types/src/client/: deserialize_value.rs  errors.rs  mod.rs  wire_types.rs
crates/dbcrossbar_trino_types/src/test/: approx_eq_to_json.rs  client.rs  is_close_enough_to.rs  mod.rs  strategies.rs  time.rs  value.rs
crates/dbcrossbar_trino_types/src/values/: is_close_enough_to.rs  mod.rs
crates/opinionated_telemetry/: CHANGELOG.md  Cargo.toml  README.md
crates/opinionated_telemetry/examples/: README.md  cli-tracing.rs  client-tracing.rs  server-tracing.rs
crates/opinionated_telemetry/src/: debug_exporter.rs  env_extractor.rs  env_injector.rs  error.rs  glue.rs  lib.rs  metrics.rs  metrics_support.rs  our_tracing.rs  prometheus_recorder.rs  sync.rs  tracing.rs  tracing_support.rs
crates/opinionated_tracing/: Cargo.toml
crates/opinionated_tracing/examples/: cli-tracing.rs  client-tracing.rs  server-tracing.rs
crates/opinionated_tracing/src/: env_extractor.rs  env_injector.rs  lib.rs
dbcrossbar/: ALL_LICENSES.html  Cargo.toml
dbcrossbar/fixtures/: bigquery_not_null.csv  bigquery_not_null.sql  bigquery_schema.json  bigquery_schema_converted.sql  concat.sql  concat_out.csv  dbcrossbar_schema.json  exact_output.csv  exact_output.sql  example.csv  example.sql  invalid_date.csv  invalid_date.sql  legacy_json.csv  legacy_json.sql  many_types.csv  many_types.sql  many_types_expected.sql  more_bq_types.csv  more_bq_types.sql  more_pg_types.csv  more_pg_types.sql  more_types.csv  posts.csv  posts.sql  posts_where_author_id_1.csv  redshift_types.csv  redshift_types.sql  shopify.ts  tricky_column_names.csv  tricky_column_names.sql  tricky_column_names_expected.csv  upsert.sql  upsert_1.csv  upsert_2.csv  upsert_result.csv
dbcrossbar/fixtures/bigquery_test_fixture/: empty_array.csv  empty_array.sql  single_column.sql
dbcrossbar/fixtures/dbcrossbar_ts/: shapes.json  shapes.ts
dbcrossbar/fixtures/json/: input.jsonl
dbcrossbar/fixtures/redshift_upsert/: upsert.sql  upsert_1.csv  upsert_2.csv  upsert_result.csv
dbcrossbar/fixtures/structs/: struct-data-type-after-bq.json  struct-data-type.json  struct.json
dbcrossbar/fixtures/trino/: dbcrossbar_schema_expected.json  from_bigquery.sql  from_dbcrossbar.sql  from_postgres.sql  lambda_regression.csv  lambda_regression.sql  many_types_expected.sql  schema.sql  very_complex.csv  very_complex.sql
dbcrossbar/fixtures/upsert/: upsert_result.csv
dbcrossbar/proptest-regressions/drivers/trino_shared/: create_table.txt
dbcrossbar/src/: args.rs  concat.rs  config.rs  context.rs  credentials.rs  csv_stream.rs  driver_args.rs  from_csv_cell.rs  from_json_value.rs  locator.rs  logging.rs  main.rs  parse_error.rs  path_or_stdio.rs  rechunk.rs  schema.rs  separator.rs  temporary_storage.rs  tls.rs  tokio_glue.rs  transform.rs  url_with_hidden_password.rs  wait.rs
dbcrossbar/src/clouds/: mod.rs
dbcrossbar/src/clouds/aws/: auth.rs  mod.rs  signing.rs
dbcrossbar/src/clouds/gcloud/: auth.rs  client.rs
dbcrossbar/src/cmd/: config.rs  conv.rs  count.rs  cp.rs  features.rs  license.rs  mod.rs  schema.rs
dbcrossbar/src/cmd/schema/: conv.rs  mod.rs
dbcrossbar/src/data_streams/: csv_converter.rs  jsonl_converter.rs  mod.rs
dbcrossbar/src/drivers/: mod.rs
dbcrossbar/tests/: tests.rs
dbcrossbar/tests/cli/: about.rs  conv.rs  count.rs  main.rs
dbcrossbarlib/: Cargo.toml  README.md  build.rs
dbcrossbarlib/examples/: citus_shards.rs  pg_copy_binary.rs  pg_copy_binary.sql
dbcrossbarlib/proptest-regressions/planner/: conversions.txt
dbcrossbarlib/src/: args.rs  concat.rs  config.rs  context.rs  credentials.rs  csv_stream.rs  data.rs  data_stream.rs  driver_args.rs  from_csv_cell.rs  from_json_value.rs  if_exists.rs  json_to_csv.rs  lib.rs  locator.rs  parse_error.rs  path_or_stdio.rs  query.rs  rechunk.rs  schema.rs  separator.rs  temporary_storage.rs  tls.rs  tokio_glue.rs  transform.rs  uniquifier.rs
dbcrossbarlib/src/clouds/: mod.rs
dbcrossbarlib/src/data_streams/: jsonl_converter.rs  mod.rs
dbcrossbarlib/src/drivers/: bigquery.rs  mod.rs
dbcrossbarlib/src/parsers/: mod.rs
dbcrossbarlib/src/planner/: clouds.rs  conversions.rs  cost.rs  formats.rs  mod.rs  planner.pl
examples/: my_table.csv  (+2 more)
schemaconv/: Cargo.toml
schemaconv/src/: main.rs
schemaconv/tests/: tests.rs
schemaconvlib/: Cargo.toml  build.rs
schemaconvlib/examples/: citus_shards.rs
schemaconvlib/src/: lib.rs  schema.rs  table.rs
schemaconvlib/src/drivers/: bigquery.rs  mod.rs  postgres.rs
schemaconvlib/src/parsers/: mod.rs  postgres.rs  postgres.rustpeg
(+263 files in other folders)
