[package]
name = "dbcrossbar"
version = "0.5.0-beta.1"
authors = ["Eric Kidd <git@randomhacks.net>"]
edition = "2018"

description = "Program for copying data between databases (pre-release)"
categories = ["command-line-utilities", "database", "filesystem"]
keywords = ["postgresql", "bigquery"]
license = "Apache-2.0 OR MIT"
readme = "../README.md"
homepage = "https://www.dbcrossbar.org/"
repository = "https://github.com/dbcrossbar/dbcrossbar"
documentation = "https://www.dbcrossbar.org/"

[dev-dependencies]
cli_test_dir = "0.1.5"
csv = "1.0.5"
difference = "2.0"
pretty_assertions = "1.0.0"

[dependencies]
anyhow = "1.0.51"
clap = { version = "2.32.0", features = ["wrap_help"] }
futures = "0.3.1"
humanize-rs = "0.1.5"
include-flate = { version = "0.1.3", features = ["stable"] }
opener = "0.5.0"
openssl-probe = "0.1.2"
dbcrossbarlib = { path = "../dbcrossbarlib", version = "=0.5.0-beta.1" }
serde = "1.0.79"
serde_json = "1.0.32"
structopt = "0.3.1"
structopt-derive = "0.4"
tempfile = "3.1.0"
tokio = { version = "1.0.1", features = ["fs", "io-std", "io-util", "process", "rt", "rt-multi-thread", "sync", "time"] }
tokio-util = { version = "0.6.1", features = ["codec"] }
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
url = "2.1.0"
