[package]
name = "dbcrossbar"
version = "0.5.5"
authors = ["Eric Kidd <git@randomhacks.net>"]
edition = "2018"

description = "Program for copying data between databases (pre-release)"
categories = ["command-line-utilities", "database", "filesystem"]
keywords = ["postgresql", "bigquery", "database", "csv"]
license = "Apache-2.0 OR MIT"
readme = "../README.md"
homepage = "https://www.dbcrossbar.org/"
repository = "https://github.com/dbcrossbar/dbcrossbar"
documentation = "https://www.dbcrossbar.org/"

[dev-dependencies]
cli_test_dir = "0.1.5"
csv = "1.0.5"
difference = "2.0"
opinionated_telemetry = { version = "0.2.0", path = "../crates/opinionated_telemetry", features = ["sync"] }
pretty_assertions = "1.0.0"
tempfile = "3.1.0"
tracing-subscriber = "0.3.3"

[dependencies]
anyhow = { version = "1.0.51", features = ["backtrace"] }
async-trait = "0.1.29"
base64 = "0.21"
big_enum_set = "0.3"
bigml = "1.0.0"
byteorder = "1.3.1"
bytes = "1.0.1"
cast = "0.3.0"
chrono = "0.4.6"
clap = { version = "4.3.11", features = ["wrap_help", "derive"] }
codespan-reporting = "0.11.0"
crc32c = "0.6.0"
csv = "1.0.5"
dirs = "5.0"
futures = "0.3.1"
geo-types = "0.7.2"
geojson = { version = "0.24", features = ["geo-types"] }
headers = "0.3.2"
hex = "0.4.0"
hmac = "0.12.0"
humanize-rs = "0.1.5"
hyper = "0.14.2"
hyper-rustls = "0.24.1"
include-flate = { version = "0.2", features = ["stable"] }
itertools = "0.11"
lazy_static = "1.2.0"
log = "0.4.5"
metrics = "0.21.1"
mime = "0.3.16"
opener = "0.6.1"
openssl-probe = "0.1.2"
opinionated_telemetry = { version = "0.2.0", path = "../crates/opinionated_telemetry" }
parse_link_header = "0.3"
peg = "0.8"
percent-encoding = "2.1.0"
postgis = "0.9.0"
rand = "0.8.1"
regex = "1.5.4"
reqwest = { version = "0.11.0", default-features = false, features = ["rustls-tls-native-roots", "json", "stream"] }
rustls = "0.20.1"
rustls-native-certs = "0.6.1"
sha-1 = "0.10.0"
sha2 = "0.10.0"
serde = "1.0.79"
serde_derive = "1.0.79"
serde_json = "1.0.32"
serde_urlencoded = "0.7.0"
strum = "0.25"
strum_macros = "0.25"
tempfile = "3.1.0"
termcolor = "1.1.0"
tokio = { version = "1.0.1", features = ["fs", "io-std", "io-util", "process", "rt", "rt-multi-thread", "sync", "time"] }
tokio-postgres = "0.7.0"
tokio-postgres-rustls = "0.9.0"
tokio-stream = { version = "0.1.2", features = ["io-util"] }
tokio-util = { version = "0.6.1", features = ["codec"] }
toml_edit = "0.19"
tracing = "0.1.37"
url = "2.1.0"
uuid = "1.4"
walkdir = "2.2.9"
# Locked because upgrading it breaks Google Cloud with date-parsing errors.
yup-oauth2 = "= 8.3.0"
