[package]
name = "dbcrossbar"
version = "0.5.8-pre.3"
authors = ["Eric Kidd <git@randomhacks.net>"]
edition = "2021"

description = "Program for copying data between databases (pre-release)"
categories = ["command-line-utilities", "database", "filesystem"]
keywords = ["postgresql", "bigquery", "database", "csv"]
license = "Apache-2.0 OR MIT"
readme = "../README.md"
homepage = "https://www.dbcrossbar.org/"
repository = "https://github.com/dbcrossbar/dbcrossbar"
documentation = "https://www.dbcrossbar.org/"

[dev-dependencies]
cli_test_dir = "0.1.5"
csv = "1.0.5"
dbcrossbar_trino = { version = "0.2.0", path = "../crates/dbcrossbar_trino", features = [
    "client",
    "values",
    "proptest",
    "rustls-tls",
    "macros",
] }
difference = "2.0"
opinionated_telemetry = { version = "0.2.0", path = "../crates/opinionated_telemetry", features = [
    "sync",
] }
pretty_assertions = "1.0.0"
proptest = "1.4.0"
proptest-derive = "0.7.0"
tempfile = "3"
tracing-subscriber = "0.3.3"

[dependencies]
anyhow = { version = "1.0.51", features = ["backtrace"] }
async-trait = "0.1.29"
base64 = "0.22"
big_enum_set = "0.3"
byteorder = "1.3.1"
bytes = "1.0.1"
cast = "0.3.0"
chrono = "0.4.6"
clap = { version = "4.3.11", features = ["wrap_help", "derive"] }
codespan-reporting = "0.13"
crc32c = "0.6.0"
csv = "1.0.5"
dbcrossbar_trino = { version = "0.2.0", path = "../crates/dbcrossbar_trino", features = [
    "client",
    "values",
    "rustls-tls",
    "macros",
] }
dirs = "6.0"
futures = "0.3.1"
geo-types = "0.7.2"
geojson = { version = "0.24", features = ["geo-types"] }
headers = "0.4"
http = "1.0"
http-body-util = "0.1"
hex = "0.4.0"
hmac = "0.12.0"
humanize-rs = "0.1.5"
hyper = "1.0"
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "http2", "native-tokio", "aws-lc-rs"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2"] }
include-flate = "0.3"
itertools = "0.14"
lazy_static = "1.2.0"
log = "0.4.5"
metrics = "0.24"
mime = "0.3.16"
opener = "0.8"
opinionated_telemetry = { version = "0.2.0", path = "../crates/opinionated_telemetry" }
parse_link_header = "0.4"
peg = "0.8"
percent-encoding = "2.1.0"
postgis = "0.9.0"
pretty = "0.12.3"
rand = "0.9"
regex = "1.5.4"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls-native-roots-no-provider",
    "json",
    "stream",
] }
rustls = { version = "0.23", features = ["aws-lc-rs"] }
rustls-native-certs = "0.8"
sha-1 = "0.10.0"
sha2 = "0.10.0"
serde = "1.0.79"
serde_derive = "1.0.79"
serde_json = "1.0.32"
serde_urlencoded = "0.7.0"
strum = "0.27"
strum_macros = "0.27"
tempfile = "3"
termcolor = "1.1.0"
tokio = { version = "1.0.1", features = [
    "fs",
    "io-std",
    "io-util",
    "process",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
] }
tokio-postgres = "0.7.0"
tokio-postgres-rustls = "0.13"
tokio-stream = { version = "0.1.2", features = ["io-util"] }
tokio-util = { version = "0.7", features = ["codec"] }
toml_edit = "0.23"
tracing = "0.1.37"
url = "2.1.0"
uuid = "1.4"
walkdir = "2.2.9"
gcp_auth = { version = "0.12", default-features = false }
