[package]
name = "dbcrossbarlib"
version = "0.4.0-alpha.7"
authors = ["Eric Kidd <git@randomhacks.net>"]
edition = "2018"

description = "Library for copying data between databases (pre-release)"
categories = ["database", "filesystem"]
keywords = ["database"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
homepage = "https://www.dbcrossbar.org/"
repository = "https://github.com/dbcrossbar/dbcrossbar"
documentation = "https://docs.rs/dbcrossbarlib/"

[dev-dependencies]
main_error = "0.1.0"
slog-async = "2.3.0"
slog-envlogger = "2.1.0"
slog-term = "2.4.0"

[dependencies]
async-trait = "0.1.29"
base64 = "0.12.0"
bigml = "0.6.3"
byteorder = "1.3.1"
bytes = "0.5.3"
cast = "0.2.3"
chrono = "0.4.6"
codespan-reporting = "0.9.3"
common_failures = "0.1.1"
csv = "1.0.5"
diesel = { version = "1.3.3", features = ["postgres"] }
dirs = "2.0.2"
enumset = "1.0.0"
failure = "0.1.2"
futures = "0.3.1"
geo-types = "0.5"
geojson = { version = "0.18.0", features = ["geo-types"] }
headers = "0.3.2"
hex = "0.4.0"
hmac = "0.7.1"
hyper = "0.13.4"
hyper-rustls = "0.20"
itertools = "0.9.0"
lazy_static = "1.2.0"
log = "0.4.5"
native-tls = "0.2.2"
parse_link_header = "0.2.0"
peg = "0.6.2"
percent-encoding = "2.1.0"
postgis = "0.7.0"
postgres-native-tls = "0.3.0"
rand = "0.7"
regex = "1.1.0"
reqwest = "0.10.0"
serde = "1.0.79"
serde_json = "1.0.32"
serde_derive = "1.0.79"
serde_urlencoded = "0.6.1"
tokio-postgres = "0.5.1"
sha-1 = "0.8.1"
slog = "2.4.1"
strum = "0.18.0"
strum_macros = "0.18.0"
tempdir = "0.3.7"
termcolor = "1.1.0"
tokio = { version = "0.2.6", features = ["fs", "io-std", "io-util", "process", "stream", "sync", "time"] }
toml_edit = "0.1.5"
url = "2.1.0"
uuid = "0.8.1"
walkdir = "2.2.9"
yup-oauth2 = "4.1.0"
