[package]
name = "dbcrossbarlib"
version = "0.4.2-beta.11"
authors = ["Eric Kidd <git@randomhacks.net>"]
edition = "2018"

description = "Library for copying data between databases (pre-release)"
categories = ["database", "filesystem"]
keywords = ["database"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
homepage = "https://www.dbcrossbar.org/"
repository = "https://github.com/dbcrossbar/dbcrossbar"
documentation = "https://docs.rs/dbcrossbarlib/"

[dev-dependencies]
main_error = "0.1.0"
slog-async = "2.3.0"
slog-envlogger = "2.1.0"
slog-term = "2.4.0"
tempfile = "3.1.0"

[dependencies]
async-trait = "0.1.29"
base64 = "0.13.0"
big_enum_set = "0.2.1"
bigml = "0.7.0"
byteorder = "1.3.1"
bytes = "1.0.1"
cast = "0.2.3"
chrono = "0.4.6"
codespan-reporting = "0.11.0"
common_failures = "0.1.1"
crc32c = "0.5.0"
csv = "1.0.5"
dirs = "3.0"
failure = "0.1.2"
futures = "0.3.1"
geo-types = "0.6.0"
geojson = { version = "0.21.0", features = ["geo-types"] }
headers = "0.3.2"
hex = "0.4.0"
hmac = "0.10.1"
hyper = "0.14.2"
hyper-rustls = "0.22.1"
itertools = "0.10.0"
lazy_static = "1.2.0"
log = "0.4.5"
mime = "0.3.16"
native-tls = "0.2.2"
parse_link_header = "0.2.0"
peg = "0.6.2"
percent-encoding = "2.1.0"
postgis = "0.7.0"
postgres-native-tls = "0.5.0"
rand = "0.8.1"
regex = "1.1.0"
reqwest = { version = "0.11.0", features = ["json", "stream"] }
serde = "1.0.79"
serde_json = "1.0.32"
serde_derive = "1.0.79"
serde_urlencoded = "0.7.0"
tokio-postgres = "0.7.0"
sha-1 = "0.9.0"
sha2 = "0.9.0"
slog = "2.4.1"
strum = "0.20.0"
strum_macros = "0.20.1"
termcolor = "1.1.0"
tokio = { version = "1.0.1", features = ["fs", "io-std", "io-util", "process", "rt", "rt-multi-thread", "sync", "time"] }
tokio-stream = { version = "0.1.2", features = ["io-util"] }
toml_edit = "0.2.0"
url = "2.1.0"
uuid = "0.8.1"
walkdir = "2.2.9"
yup-oauth2 = "5.0.1"
