[package]
name = "dbcrossbarlib"
version = "0.5.0-beta.2"
authors = ["Eric Kidd <git@randomhacks.net>"]
edition = "2018"

description = "Library for copying data between databases (pre-release)"
categories = ["database", "filesystem"]
keywords = ["database"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
homepage = "https://www.dbcrossbar.org/"
repository = "https://github.com/dbcrossbar/dbcrossbar"
documentation = "https://docs.rs/dbcrossbarlib/"

[dev-dependencies]
pretty_assertions = "1.0.0"
proptest = "1.0.0"
proptest-derive = "0.3.0"
tempfile = "3.1.0"
tracing-subscriber = "0.3.3"

[dependencies]
anyhow = { version = "1.0.51", features = ["backtrace"] }
async-trait = "0.1.29"
base64 = "0.13.0"
big_enum_set = "0.2.1"
bigml = "0.9.0"
byteorder = "1.3.1"
bytes = "1.0.1"
cast = "0.3.0"
chrono = "0.4.6"
codespan-reporting = "0.11.0"
crc32c = "0.6.0"
csv = "1.0.5"
dirs = "4.0"
enum-iterator = "0.7.0"
futures = "0.3.1"
geo-types = "0.7.2"
geojson = { version = "0.22.2", features = ["geo-types"] }
headers = "0.3.2"
hex = "0.4.0"
hmac = "0.12.0"
hyper = "0.14.2"
hyper-rustls = "0.22.1"
itertools = "0.10.0"
immutable-chunkmap = "1.0.1"
lazy_static = "1.2.0"
mime = "0.3.16"
parse_link_header = "0.2.0"
peg = "0.7.0"
percent-encoding = "2.1.0"
postgis = "0.9.0"
rand = "0.8.1"
regex = "1.1.0"
reqwest = { version = "0.11.0", default-features = false, features = ["rustls-tls-native-roots", "json", "stream"] }
rustls = "0.20.1"
rustls-native-certs = "0.6.1"
serde = "1.0.79"
serde_json = "1.0.32"
serde_derive = "1.0.79"
serde_urlencoded = "0.7.0"
stack_list = "0.1.0"
tokio-postgres = "0.7.0"
tokio-postgres-rustls = "0.9.0"
sha-1 = "0.10.0"
sha2 = "0.10.0"
strum = "0.23.0"
strum_macros = "0.23.1"
termcolor = "1.1.0"
tokio = { version = "1.0.1", features = ["fs", "io-std", "io-util", "process", "rt", "rt-multi-thread", "sync", "time"] }
tokio-stream = { version = "0.1.2", features = ["io-util"] }
toml_edit = "0.11.0"
tracing = "0.1.29"
tracing-futures = "0.2.5"
url = "2.1.0"
uuid = "0.8.1"
walkdir = "2.2.9"
yup-oauth2 = "6.1.0"
