[package]
name = "schemaconvlib"
version = "0.1.0"
authors = ["Eric Kidd <git@randomhacks.net>"]
build = "build.rs"
edition = "2018"

[build-dependencies]
peg = "0.5"

[dependencies]
diesel = { version = "1.3.3", features = ["postgres"] }
failure = "0.1.2"
log = "0.4.5"
serde = "1.0.79"
serde_json = "1.0.32"
serde_derive = "1.0.79"
url = "1.7.1"
