[package]
name = "opinionated_telemetry"
version = "0.2.0"
authors = ["Eric Kidd <git@randomhacks.net>"]
edition = "2018"

description = "Opinionated configuration for tracing and metrics crates (with OpenTelemetry & Prometheus)."
categories = ["development-tools::debugging", "development-tools::profiling"]
keywords = ["opentelemetry", "prometheus", "tracing", "metrics"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
homepage = "https://github.com/dbcrossbar/dbcrossbar/tree/main/crates/opinionated_telemetry"
repository = "https://github.com/dbcrossbar/dbcrossbar"
documentation = "https://docs.rs/opinionated_telemetry/"

[features]
default = []
# Optional: Provide a synchronous API for telemetry.
sync = ["tokio/rt"]

[dev-dependencies]
anyhow = "1.0.52"
tokio = { version = "1", default-features = false, features = [
    "io-util",
    "macros",
    "net",
    "process",
    "rt-multi-thread",
] }

[dependencies]
futures = "0.3"
# Try to track the same version of `hyper` as `opentelemetry-stackdriver`
# if we can, just to keep the binary size down.
hyper = { version = "1.0", default-features = false, features = [
    "client",
    "server",
    "http1",
    "http2",
] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2", "tokio", "server", "server-auto"] }
http-body-util = "0.1"
metrics = "0.24"
metrics-util = "0.20"
once_cell = "1.18.0"
opentelemetry = "0.31"
opentelemetry_sdk = "0.31"
opentelemetry-stackdriver = "0.28"
serde_json = "1"
thiserror = "2"
tracing = "0.1.29"
tracing-log = "0.2"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", default-features = false, features = ["sync"] }
